cluster/apps/media-server/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media-server
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:1.6.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 6767
          resources:
            requests:
              cpu: "20m"
              memory: "256Mi"
            limits:
              memory: "384Mi"
          volumeMounts:
            - name: bazarr-config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: bazarr-config
          persistentVolumeClaim:
            claimName: bazarr-config-pvc
        - name: data
          persistentVolumeClaim:
            claimName: media-data-pvc
